Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29467

Can't 'Jump to File Under Cursor' if path relates to ${CMAKE_SOURCE_DIR}

XMLWordPrintable

    • Windows
    • bd36af75e (master)

      'Jump to File Under Cursor' (F2) feature don't work if path contains ${CMAKE_SOURCE_DIR} variable

      e.g. 

      include(${CMAKE_SOURCE_DIR}/../shared/CMakeLists.txt) 

       

      while this feature works fine with ${CMAKE_CURRENT_SOURCE_DIR} variable

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            morte Maxim Bescherevnykh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes