CMakePM: Add F2 jump for CMAKE_SOURCE_DIR and more

This will allow opening CMake files via F2 when using include statements
like: include(${CMAKE_SOURCE_DIR}/cmake/api.cmake)

CMAKE_BINARY_DIR and CMAKE_CURRENT_BINARY_DIR are also supported.

Fixes: QTCREATORBUG-29467
Change-Id: I9adb417d98e8a8fccf6cd3e5038562db02cb28c2
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>